@@ -29,12 +29,10 @@ import neqsim.thermo.system.SystemInterface;
 import org.apache.logging.log4j.*;
 
 /**
- *
- * @author Even Solbraa
+ * @author  Even Solbraa
  * @version
  */
-abstract class Phase extends Object
-        implements PhaseInterface{
+abstract class Phase implements PhaseInterface {
 
     private static final long serialVersionUID = 1000;
 
@@ -71,7 +69,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public Object clone() {
+    public Object clone() {
 
         Phase clonedPhase = null;
 
@@ -100,7 +98,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public void removeComponent(String componentName, double moles, double molesInPhase, int compNumber) {
+    public void removeComponent(String componentName, double moles, double molesInPhase, int compNumber) {
         java.util.ArrayList temp = new java.util.ArrayList();
 
         try {
@@ -125,7 +123,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public void setEmptyFluid() {
+    public void setEmptyFluid() {
         numberOfMolesInPhase = 0.0;
         for (int i = 0; i < getNumberOfComponents(); i++) {
             this.getComponent(i).setNumberOfMolesInPhase(0.0);
@@ -134,19 +132,19 @@ abstract class Phase extends Object
     }
 
     @Override
-	public void addMoles(int component, double dn) {
+    public void addMoles(int component, double dn) {
         numberOfMolesInPhase += dn;
         componentArray[component].addMoles(dn);
     }
 
     @Override
-	public void addMolesChemReac(int component, double dn) {
+    public void addMolesChemReac(int component, double dn) {
         numberOfMolesInPhase += dn;
         componentArray[component].addMolesChemReac(dn);
     }
 
     @Override
-	public void addMolesChemReac(int component, double dn, double totdn) {
+    public void addMolesChemReac(int component, double dn, double totdn) {
         numberOfMolesInPhase += dn;
         componentArray[component].addMolesChemReac(dn, totdn);
         if (numberOfMolesInPhase < 0.0 || getComponent(component).getNumberOfMolesInPhase() < 0.0) {
@@ -162,7 +160,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public void setProperties(PhaseInterface phase) {
+    public void setProperties(PhaseInterface phase) {
         this.phaseType = phase.getPhaseType();
         for (int i = 0; i < phase.getNumberOfComponents(); i++) {
             this.getComponent(i).setProperties(phase.getComponent(i));
@@ -175,12 +173,12 @@ abstract class Phase extends Object
     }
 
     @Override
-	public ComponentInterface[] getcomponentArray() {
+    public ComponentInterface[] getcomponentArray() {
         return componentArray;
     }
 
     @Override
-	public double getAntoineVaporPressure(double temp) {
+    public double getAntoineVaporPressure(double temp) {
         double pres = 0;
         for (int i = 0; i < numberOfComponents; i++) {
             pres += componentArray[i].getx() * componentArray[i].getAntoineVaporPressure(temp);
@@ -190,17 +188,17 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getWtFrac(String componentName) {
+    public double getWtFrac(String componentName) {
         return getWtFrac(getComponent(componentName).getComponentNumber());
     }
 
     @Override
-	public double getWtFrac(int component) {
+    public double getWtFrac(int component) {
         return getComponent(component).getMolarMass() * getComponent(component).getx() / this.getMolarMass();
     }
 
     @Override
-	public double getPseudoCriticalTemperature() {
+    public double getPseudoCriticalTemperature() {
         double temp = 0;
         for (int i = 0; i < numberOfComponents; i++) {
             temp += componentArray[i].getx() * componentArray[i].getTC();
@@ -209,7 +207,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getPseudoCriticalPressure() {
+    public double getPseudoCriticalPressure() {
         double pres = 0;
         for (int i = 0; i < numberOfComponents; i++) {
             pres += componentArray[i].getx() * componentArray[i].getPC();
@@ -218,7 +216,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public void normalize() {
+    public void normalize() {
         double sumx = 0;
         for (int i = 0; i < numberOfComponents; i++) {
             sumx += componentArray[i].getx();
@@ -229,7 +227,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public void setMoleFractions(double[] x) {
+    public void setMoleFractions(double[] x) {
         for (int i = 0; i < numberOfComponents; i++) {
             componentArray[i].setx(x[i]);
         }
@@ -237,7 +235,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getTemperature() {
+    public double getTemperature() {
         return temperature;
     }
 
@@ -247,24 +245,24 @@ abstract class Phase extends Object
      * @return pressure in unit bara
      */
     @Override
-	public double getPressure() {
+    public double getPressure() {
         return pressure;
     }
 
     /**
      * method to return pressure in a given unit
      *
-     * @param unit The unit as a string. Supported units are bara, barg, Pa and MPa
-     * @return pressure in specified unit
+     * @param  unit The unit as a string. Supported units are bara, barg, Pa and MPa
+     * @return      pressure in specified unit
      */
     @Override
-	public final double getPressure(String unit) {
+    public final double getPressure(String unit) {
         neqsim.util.unit.PressureUnit presConversion = new neqsim.util.unit.PressureUnit(getPressure(), "bara");
         return presConversion.getValue(unit);
     }
 
     @Override
-	public int getInitType() {
+    public int getInitType() {
         return initType;
     }
 
@@ -272,7 +270,7 @@ abstract class Phase extends Object
      * Returns the mole composition vector in unit mole fraction
      */
     @Override
-	public double[] getMolarComposition() {
+    public double[] getMolarComposition() {
         double[] comp = new double[getNumberOfComponents()];
 
         for (int compNumb = 0; compNumb < numberOfComponents; compNumb++) {
@@ -286,7 +284,7 @@ abstract class Phase extends Object
      * molefraction/wtfraction/molespersec/volumefraction
      */
     @Override
-	public double[] getComposition(String unit) {
+    public double[] getComposition(String unit) {
         double[] comp = new double[getNumberOfComponents()];
 
         for (int compNumb = 0; compNumb < numberOfComponents; compNumb++) {
@@ -303,7 +301,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getMixGibbsEnergy() {
+    public double getMixGibbsEnergy() {
         double gmix = 0.0;
         for (int i = 0; i < numberOfComponents; i++) {
             gmix += getComponent(i).getx() * Math.log(getComponent(i).getx());
@@ -312,7 +310,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getExessGibbsEnergy() {
+    public double getExessGibbsEnergy() {
         double GE = 0.0;
         if (refPhase == null) {
             initRefPhases(false);
@@ -324,7 +322,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getExessGibbsEnergySymetric() {
+    public double getExessGibbsEnergySymetric() {
         double GE = 0.0;
         if (refPhase == null) {
             initRefPhases(true);
@@ -336,12 +334,12 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getZ() {
+    public double getZ() {
         return Z;
     }
 
     @Override
-	public void setPressure(double pres) {
+    public void setPressure(double pres) {
         this.pressure = pres;
     }
 
@@ -351,12 +349,12 @@ abstract class Phase extends Object
      * @param temp in unit Kelvin
      */
     @Override
-	public void setTemperature(double temp) {
+    public void setTemperature(double temp) {
         this.temperature = temp;
     }
 
     @Override
-	public neqsim.physicalProperties.physicalPropertySystem.PhysicalPropertiesInterface getPhysicalProperties() {
+    public neqsim.physicalProperties.physicalPropertySystem.PhysicalPropertiesInterface getPhysicalProperties() {
         if (physicalPropertyHandler == null) {
             initPhysicalProperties();
             return physicalPropertyHandler.getPhysicalProperty(this);
@@ -366,12 +364,12 @@ abstract class Phase extends Object
     }
 
     @Override
-	public void init() {
+    public void init() {
         init(numberOfMolesInPhase / beta, numberOfComponents, initType, phaseType, beta);
     }
 
     @Override
-	public void init(double totalNumberOfMoles, int numberOfComponents, int type, int phase, double beta) { // type = 0
+    public void init(double totalNumberOfMoles, int numberOfComponents, int type, int phase, double beta) { // type = 0
                                                                                                             // start
                                                                                                             // init type
                                                                                                             // =1 gi nye
@@ -391,7 +389,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public void setPhysicalProperties() {
+    public void setPhysicalProperties() {
         // System.out.println("Physical properties: Default model");
         setPhysicalProperties(physicalPropertyType);
         // physicalProperty = new
@@ -403,7 +401,7 @@ abstract class Phase extends Object
      * Model 0 Orginal/default 1 Water 2 Glycol 3 Amine
      */
     @Override
-	public void setPhysicalProperties(int type) {
+    public void setPhysicalProperties(int type) {
         if (physicalPropertyHandler == null) {
             physicalPropertyHandler = new PhysicalPropertyHandler();
         }
@@ -412,12 +410,12 @@ abstract class Phase extends Object
     }
 
     @Override
-	public void resetPhysicalProperties() {
+    public void resetPhysicalProperties() {
         physicalPropertyHandler = null;
     }
 
     @Override
-	public void initPhysicalProperties() {
+    public void initPhysicalProperties() {
         if (physicalPropertyHandler == null) {
             physicalPropertyHandler = new PhysicalPropertyHandler();
         }
@@ -429,7 +427,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public void initPhysicalProperties(String type) {
+    public void initPhysicalProperties(String type) {
         if (physicalPropertyHandler == null) {
             physicalPropertyHandler = new PhysicalPropertyHandler();
         }
@@ -447,27 +445,27 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double geta(PhaseInterface phase, double temperature, double pressure, int numbcomp) {
+    public double geta(PhaseInterface phase, double temperature, double pressure, int numbcomp) {
         return 1;
     }
 
     @Override
-	public double getb(PhaseInterface phase, double temperature, double pressure, int numbcomp) {
+    public double getb(PhaseInterface phase, double temperature, double pressure, int numbcomp) {
         return 1;
     }
 
     @Override
-	public double calcA(PhaseInterface phase, double temperature, double pressure, int numbcomp) {
+    public double calcA(PhaseInterface phase, double temperature, double pressure, int numbcomp) {
         return 1;
     }
 
     @Override
-	public double calcB(PhaseInterface phase, double temperature, double pressure, int numbcomp) {
+    public double calcB(PhaseInterface phase, double temperature, double pressure, int numbcomp) {
         return 1;
     }
 
     @Override
-	public double getg() {
+    public double getg() {
         return 1;
     }
 
@@ -476,39 +474,39 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double calcAi(int comp, PhaseInterface phase, double temperature, double pressure, int numbcomp) {
+    public double calcAi(int comp, PhaseInterface phase, double temperature, double pressure, int numbcomp) {
         return 1;
     }
 
     @Override
-	public double calcAiT(int comp, PhaseInterface phase, double temperature, double pressure, int numbcomp) {
+    public double calcAiT(int comp, PhaseInterface phase, double temperature, double pressure, int numbcomp) {
         return 1;
     }
 
     @Override
-	public double calcAT(int comp, PhaseInterface phase, double temperature, double pressure, int numbcomp) {
+    public double calcAT(int comp, PhaseInterface phase, double temperature, double pressure, int numbcomp) {
         return 1;
     }
 
     @Override
-	public double calcAij(int compNumb, int j, PhaseInterface phase, double temperature, double pressure,
+    public double calcAij(int compNumb, int j, PhaseInterface phase, double temperature, double pressure,
             int numbcomp) {
         return 0;
     }
 
     @Override
-	public double calcBij(int compNumb, int j, PhaseInterface phase, double temperature, double pressure,
+    public double calcBij(int compNumb, int j, PhaseInterface phase, double temperature, double pressure,
             int numbcomp) {
         return 0;
     }
 
     @Override
-	public double calcBi(int comp, PhaseInterface phase, double temperature, double pressure, int numbcomp) {
+    public double calcBi(int comp, PhaseInterface phase, double temperature, double pressure, int numbcomp) {
         return 1;
     }
 
     @Override
-	public void setAtractiveTerm(int i) {
+    public void setAtractiveTerm(int i) {
         for (int k = 0; k < numberOfComponents; k++) {
             componentArray[k].setAtractiveTerm(i);
         }
@@ -521,23 +519,22 @@ abstract class Phase extends Object
      * @return molar volume volume in unit m3/mol*1e5
      */
     @Override
-	public double getMolarVolume() {
+    public double getMolarVolume() {
         return molarVolume;
     }
 
     @Override
-	public int getNumberOfComponents() {
+    public int getNumberOfComponents() {
         return numberOfComponents;
     }
 
-
     @Override
-	public double getA() {
+    public double getA() {
         return 0;
     }
 
     @Override
-	public double getB() {
+    public double getB() {
         return 0;
     }
 
@@ -546,12 +543,12 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getAT() {
+    public double getAT() {
         return 0;
     }
 
     @Override
-	public double getATT() {
+    public double getATT() {
         return 0;
     }
 
@@ -560,27 +557,27 @@ abstract class Phase extends Object
     }
 
     @Override
-	public PhaseInterface getPhase() {
+    public PhaseInterface getPhase() {
         return this;
     }
 
     @Override
-	public double getNumberOfMolesInPhase() {
+    public double getNumberOfMolesInPhase() {
         return numberOfMolesInPhase;
     }
 
     @Override
-	public ComponentInterface[] getComponents() {
+    public ComponentInterface[] getComponents() {
         return componentArray;
     }
 
     @Override
-	public void setComponentArray(ComponentInterface[] components) {
+    public void setComponentArray(ComponentInterface[] components) {
         this.componentArray = components;
     }
 
     @Override
-	public double calcR() {
+    public double calcR() {
 
         double R = 8.314 / getMolarMass();
 
@@ -588,162 +585,162 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double Fn() {
+    public double Fn() {
         return 1;
     }
 
     @Override
-	public double FT() {
+    public double FT() {
         return 1;
     }
 
     @Override
-	public double FV() {
+    public double FV() {
         return 1;
     }
 
     @Override
-	public double FD() {
+    public double FD() {
         return 1;
     }
 
     @Override
-	public double FB() {
+    public double FB() {
         return 1;
     }
 
     @Override
-	public double gb() {
+    public double gb() {
         return 1;
     }
 
     @Override
-	public double fb() {
+    public double fb() {
         return 1;
     }
 
     @Override
-	public double gV() {
+    public double gV() {
         return 1;
     }
 
     @Override
-	public double fv() {
+    public double fv() {
         return 1;
     }
 
     @Override
-	public double FnV() {
+    public double FnV() {
         return 1;
     }
 
     @Override
-	public double FnB() {
+    public double FnB() {
         return 1;
     }
 
     @Override
-	public double FTT() {
+    public double FTT() {
         return 1;
     }
 
     @Override
-	public double FBT() {
+    public double FBT() {
         return 1;
     }
 
     @Override
-	public double FDT() {
+    public double FDT() {
         return 1;
     }
 
     @Override
-	public double FBV() {
+    public double FBV() {
         return 1;
     }
 
     @Override
-	public double FBB() {
+    public double FBB() {
         return 1;
     }
 
     @Override
-	public double FDV() {
+    public double FDV() {
         return 1;
     }
 
     @Override
-	public double FBD() {
+    public double FBD() {
         return 1;
     }
 
     @Override
-	public double FTV() {
+    public double FTV() {
         return 1;
     }
 
     @Override
-	public double FVV() {
+    public double FVV() {
         return 1;
     }
 
     @Override
-	public double gVV() {
+    public double gVV() {
         return 1;
     }
 
     @Override
-	public double gBV() {
+    public double gBV() {
         return 1;
     }
 
     @Override
-	public double gBB() {
+    public double gBB() {
         return 1;
     }
 
     @Override
-	public double fVV() {
+    public double fVV() {
         return 1;
     }
 
     @Override
-	public double fBV() {
+    public double fBV() {
         return 1;
     }
 
     @Override
-	public double fBB() {
+    public double fBB() {
         return 1;
     }
 
     @Override
-	public double dFdT() {
+    public double dFdT() {
         return 1;
     }
 
     @Override
-	public double dFdV() {
+    public double dFdV() {
         return 1;
     }
 
     @Override
-	public double dFdTdV() {
+    public double dFdTdV() {
         return 1;
     }
 
     @Override
-	public double dFdVdV() {
+    public double dFdVdV() {
         return 1;
     }
 
     @Override
-	public double dFdTdT() {
+    public double dFdTdT() {
         return 1;
     }
 
     @Override
-	public double getCpres() {
+    public double getCpres() {
         return 1;
     }
 
@@ -752,7 +749,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getHresTP() {
+    public double getHresTP() {
         logger.error("error Hres");
         return 0;
     }
@@ -763,7 +760,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getGresTP() {
+    public double getGresTP() {
         logger.error("error Gres");
         return 0;
     }
@@ -774,12 +771,12 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getSresTP() {
+    public double getSresTP() {
         return 0;
     }
 
     @Override
-	public double getCp0() {
+    public double getCp0() {
         double tempVar = 0.0;
         for (int i = 0; i < numberOfComponents; i++) {
             tempVar += componentArray[i].getx() * componentArray[i].getCp0(temperature);
@@ -787,7 +784,7 @@ abstract class Phase extends Object
         return tempVar;
     }
 
-//Integral av Cp0 mhp T
+    // Integral av Cp0 mhp T
     public double getHID() {
         double tempVar = 0.0;
         for (int i = 0; i < numberOfComponents; i++) {
@@ -802,7 +799,7 @@ abstract class Phase extends Object
      * @return Cp in unit J/K
      */
     @Override
-	public double getCp() {
+    public double getCp() {
         // System.out.println("Cp res:" + this.getCpres() + " Cp0: " + getCp0());
         return getCp0() * numberOfMolesInPhase + this.getCpres();
     }
@@ -810,12 +807,12 @@ abstract class Phase extends Object
     /**
      * method to return specific heat capacity (Cp) in a given unit
      *
-     * @param unit The unit as a string. Supported units are J/K, J/molK, J/kgK and
-     *             kJ/kgK
-     * @return Cp in specified unit
+     * @param  unit The unit as a string. Supported units are J/K, J/molK, J/kgK and
+     *              kJ/kgK
+     * @return      Cp in specified unit
      */
     @Override
-	public double getCp(String unit) {
+    public double getCp(String unit) {
         double refCp = getCp(); // Cp in J/K
         double conversionFactor = 1.0;
         switch (unit) {
@@ -841,19 +838,19 @@ abstract class Phase extends Object
      * @return Cv in unit J/K
      */
     @Override
-	public double getCv() {
+    public double getCv() {
         return getCp0() * numberOfMolesInPhase - R * numberOfMolesInPhase + getCvres();
     }
 
     /**
      * method to return specific heat capacity (Cv) in a given unit
      *
-     * @param unit The unit as a string. Supported units are J/K, J/molK, J/kgK and
-     *             kJ/kgK
-     * @return Cv in specified unit
+     * @param  unit The unit as a string. Supported units are J/K, J/molK, J/kgK and
+     *              kJ/kgK
+     * @return      Cv in specified unit
      */
     @Override
-	public double getCv(String unit) {
+    public double getCv(String unit) {
         double refCv = getCv(); // Cv in J/K
         double conversionFactor = 1.0;
         switch (unit) {
@@ -879,7 +876,7 @@ abstract class Phase extends Object
      * @return kappa
      */
     @Override
-	public double getKappa() {
+    public double getKappa() {
         return getCp() / getCv();
     }
 
@@ -890,7 +887,7 @@ abstract class Phase extends Object
      * @return gamma
      */
     @Override
-	public double getGamma() {
+    public double getGamma() {
         return getCp() / getCv();
     }
 
@@ -900,7 +897,7 @@ abstract class Phase extends Object
      * @return kappa
      */
     @Override
-	public double getGamma2() {
+    public double getGamma2() {
         double cp0 = getCp();
         return cp0 / (cp0 - ThermodynamicConstantsInterface.R * numberOfMolesInPhase);
     }
@@ -909,19 +906,19 @@ abstract class Phase extends Object
      * method to return enthalpy of a phase in unit Joule
      */
     @Override
-	public double getEnthalpy() {
+    public double getEnthalpy() {
         return getHID() * numberOfMolesInPhase + this.getHresTP();
     }
 
     /**
      * method to return phase enthalpy in a given unit
      *
-     * @param unit The unit as a string. Supported units are J, J/mol, J/kg and
-     *             kJ/kg
-     * @return enthalpy in specified unit
+     * @param  unit The unit as a string. Supported units are J, J/mol, J/kg and
+     *              kJ/kg
+     * @return      enthalpy in specified unit
      */
     @Override
-	public double getEnthalpy(String unit) {
+    public double getEnthalpy(String unit) {
         double refEnthalpy = getEnthalpy(); // enthalpy in J
         double conversionFactor = 1.0;
         switch (unit) {
@@ -942,22 +939,22 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getEnthalpydP() {
+    public double getEnthalpydP() {
         return this.getHresdP();
     }
 
     @Override
-	public double getEnthalpydT() {
+    public double getEnthalpydT() {
         return getCp();
     }
 
     @Override
-	public void setNumberOfComponents(int numberOfComponents) {
+    public void setNumberOfComponents(int numberOfComponents) {
         this.numberOfComponents = numberOfComponents;
     }
 
     @Override
-	public final int getNumberOfMolecularComponents() {
+    public final int getNumberOfMolecularComponents() {
         int mol = 0;
         for (int i = 0; i < numberOfComponents; i++) {
             if (componentArray[i].getIonicCharge() == 0) {
@@ -968,7 +965,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public final int getNumberOfIonicComponents() {
+    public final int getNumberOfIonicComponents() {
         int ion = 0;
         for (int i = 0; i < numberOfComponents; i++) {
             if (componentArray[i].getIonicCharge() != 0) {
@@ -982,7 +979,7 @@ abstract class Phase extends Object
      * method to return entropy of the phase
      */
     @Override
-	public double getEntropy() {
+    public double getEntropy() {
         double tempVar = 0.0;
         for (int i = 0; i < numberOfComponents; i++) {
             tempVar += componentArray[i].getx() * componentArray[i].getIdEntropy(temperature);
@@ -1002,12 +999,12 @@ abstract class Phase extends Object
     /**
      * method to return entropy of the phase
      *
-     * @param unit The unit as a string. Supported units are J/K, J/moleK, J/kgK and
-     *             kJ/kgK
-     * @return entropy in specified unit
+     * @param  unit The unit as a string. Supported units are J/K, J/moleK, J/kgK
+     *              and kJ/kgK
+     * @return      entropy in specified unit
      */
     @Override
-	public double getEntropy(String unit) {
+    public double getEntropy(String unit) {
         double refEntropy = getEntropy(); // entropy in J/K
         double conversionFactor = 1.0;
         switch (unit) {
@@ -1028,12 +1025,12 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getEntropydP() {
+    public double getEntropydP() {
         return getdPdTVn() / getdPdVTn();
     }
 
     @Override
-	public double getEntropydT() {
+    public double getEntropydT() {
         return getCp() / temperature;
     }
 
@@ -1043,19 +1040,19 @@ abstract class Phase extends Object
      * @return viscosity in unit kg/msec
      */
     @Override
-	public double getViscosity() {
+    public double getViscosity() {
         return getPhysicalProperties().getViscosity();
     }
 
     /**
      * method to return viscosity og the phase in a given unit
      *
-     * @param unit The unit as a string. Supported units are kg/msec, cP
-     *             (centipoise)
-     * @return viscosity in specified unit
+     * @param  unit The unit as a string. Supported units are kg/msec, cP
+     *              (centipoise)
+     * @return      viscosity in specified unit
      */
     @Override
-	public double getViscosity(String unit) {
+    public double getViscosity(String unit) {
         double refViscosity = getViscosity(); // viscosity in kg/msec
         double conversionFactor = 1.0;
         switch (unit) {
@@ -1077,18 +1074,18 @@ abstract class Phase extends Object
      * @return conductivity in unit W/m*K
      */
     @Override
-	public double getThermalConductivity() {
+    public double getThermalConductivity() {
         return getPhysicalProperties().getConductivity();
     }
 
     /**
      * method to return conductivity of a phase
      *
-     * @return conductivity in unit W/m*K
+     * @return     conductivity in unit W/m*K
      * @deprecated use {@link #getThermalConductivity()} instead.
      */
     @Override
-	@Deprecated
+    @Deprecated
     public double getConductivity() {
         return getPhysicalProperties().getConductivity();
     }
@@ -1096,12 +1093,11 @@ abstract class Phase extends Object
     /**
      * method to return conductivity in a given unit
      *
-     * @param unit The unit as a string. Supported units are W/mK, W/cmK
-     *
-     * @return conductivity in specified unit
+     * @param  unit The unit as a string. Supported units are W/mK, W/cmK
+     * @return      conductivity in specified unit
      */
     @Override
-	public double getThermalConductivity(String unit) {
+    public double getThermalConductivity(String unit) {
         double refConductivity = getThermalConductivity(); // conductivity in W/m*K
         double conversionFactor = 1.0;
         switch (unit) {
@@ -1120,13 +1116,12 @@ abstract class Phase extends Object
     /**
      * method to return conductivity in a given unit
      *
-     * @param unit The unit as a string. Supported units are W/mK, W/cmK
-     *
-     * @return conductivity in specified unit
-     * @deprecated use {@link #getThermalConductivity(String unit)} instead.
+     * @param      unit The unit as a string. Supported units are W/mK, W/cmK
+     * @return          conductivity in specified unit
+     * @deprecated      use {@link #getThermalConductivity(String unit)} instead.
      */
     @Override
-	@Deprecated
+    @Deprecated
     public double getConductivity(String unit) {
         double refConductivity = getConductivity(); // conductivity in W/m*K
         double conversionFactor = 1.0;
@@ -1144,7 +1139,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public void initRefPhases(boolean onlyPure) {
+    public void initRefPhases(boolean onlyPure) {
         if (refPhase == null) {
             initRefPhases(onlyPure, "water");
         }
@@ -1154,7 +1149,7 @@ abstract class Phase extends Object
         refPhase = new PhaseInterface[numberOfComponents];
         for (int i = 0; i < numberOfComponents; i++) {
             try {
-                refPhase[i] = this.getClass().newInstance();
+                refPhase[i] = this.getClass().getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 logger.error("err " + e.toString());
             }
@@ -1210,22 +1205,22 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getLogPureComponentFugacity(int p) {
+    public double getLogPureComponentFugacity(int p) {
         return getLogPureComponentFugacity(p, false);
     }
 
     @Override
-	public double getPureComponentFugacity(int p) {
+    public double getPureComponentFugacity(int p) {
         return Math.exp(getLogPureComponentFugacity(p));
     }
 
     @Override
-	public double getPureComponentFugacity(int p, boolean pure) {
+    public double getPureComponentFugacity(int p, boolean pure) {
         return Math.exp(getLogPureComponentFugacity(p, pure));
     }
 
     @Override
-	public double getLogInfiniteDiluteFugacity(int k, int p) {
+    public double getLogInfiniteDiluteFugacity(int k, int p) {
         if (refPhase == null) {
             initRefPhases(false, getComponent(p).getName());
         }
@@ -1237,7 +1232,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getLogInfiniteDiluteFugacity(int k) {
+    public double getLogInfiniteDiluteFugacity(int k) {
         PhaseInterface dilphase = (PhaseInterface) this.clone();
         dilphase.addMoles(k, -(1.0 - 1e-10) * dilphase.getComponent(k).getNumberOfMolesInPhase());
         dilphase.getComponent(k).setx(1e-10);
@@ -1248,7 +1243,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getInfiniteDiluteFugacity(int k, int p) {
+    public double getInfiniteDiluteFugacity(int k, int p) {
         return Math.exp(getLogInfiniteDiluteFugacity(k, p));
     }
 
@@ -1257,7 +1252,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getLogActivityCoefficient(int k, int p) {
+    public double getLogActivityCoefficient(int k, int p) {
         double fug = 0.0;
         double oldFug = getComponent(k).getLogFugasityCoeffisient();
         if (getComponent(k).getReferenceStateType().equals("solvent")) {
@@ -1269,7 +1264,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getActivityCoefficient(int k, int p) {
+    public double getActivityCoefficient(int k, int p) {
         double fug = 0.0;
         double oldFug = getComponent(k).getLogFugasityCoeffisient();
         if (getComponent(k).getReferenceStateType().equals("solvent")) {
@@ -1281,7 +1276,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getActivityCoefficient(int k) {
+    public double getActivityCoefficient(int k) {
         double fug = 0.0;
 
         double oldFug = getComponent(k).getLogFugasityCoeffisient();
@@ -1294,7 +1289,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getActivityCoefficientSymetric(int k) {
+    public double getActivityCoefficientSymetric(int k) {
         if (refPhase == null) {
             initRefPhases(true);
         }
@@ -1305,7 +1300,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getActivityCoefficientUnSymetric(int k) {
+    public double getActivityCoefficientUnSymetric(int k) {
         double fug = 0.0;
         double oldFug = getComponent(k).getLogFugasityCoeffisient();
         fug = getLogInfiniteDiluteFugacity(k);
@@ -1313,7 +1308,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getMolalMeanIonicActivity(int comp1, int comp2) {
+    public double getMolalMeanIonicActivity(int comp1, int comp2) {
         double act1 = 0.0;
         double act2 = 0.0;
         int watNumb = 0;
@@ -1341,7 +1336,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getOsmoticCoefficientOfWater() {
+    public double getOsmoticCoefficientOfWater() {
         int watNumb = 0;
         for (int j = 0; j < this.numberOfComponents; j++) {
             if (getComponent(j).getComponentName().equals("water")) {
@@ -1352,7 +1347,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getOsmoticCoefficient(int watNumb) {
+    public double getOsmoticCoefficient(int watNumb) {
         double oldFug = getComponent(watNumb).getFugasityCoeffisient();
         double pureFug = getPureComponentFugacity(watNumb);
         double ions = 0.0;
@@ -1365,21 +1360,23 @@ abstract class Phase extends Object
         return val;
     }
 
-//    public double getOsmoticCoefficient(int watNumb, String refState){
-//        if(refState.equals("molality")){
-//            double oldFug = getComponent(watNumb).getFugasityCoeffisient();
-//            double pureFug = getPureComponentFugacity(watNumb);system.getPhase(i).
-//            double ions=0.0;
-//            for(int j=0;j<this.numberOfComponents;j++){
-//                if(getComponent(j).getIonicCharge()!=0) ions += getComponent(j).getNumberOfMolesInPhase()/getComponent(watNumb).getNumberOfMolesInPhase()/getComponent(watNumb).getMolarMass();//*Math.abs(getComponent(j).getIonicCharge());
-//            }
-//            double val = - Math.log(oldFug*getComponent(watNumb).getx()/pureFug) * 1.0/ions/getComponent(watNumb).getMolarMass();
-//            return val;
-//        }
-//        else return getOsmoticCoefficient(watNumb);
-//    }
+    // public double getOsmoticCoefficient(int watNumb, String refState){
+    // if(refState.equals("molality")){
+    // double oldFug = getComponent(watNumb).getFugasityCoeffisient();
+    // double pureFug = getPureComponentFugacity(watNumb);system.getPhase(i).
+    // double ions=0.0;
+    // for(int j=0;j<this.numberOfComponents;j++){
+    // if(getComponent(j).getIonicCharge()!=0) ions +=
+    // getComponent(j).getNumberOfMolesInPhase()/getComponent(watNumb).getNumberOfMolesInPhase()/getComponent(watNumb).getMolarMass();//*Math.abs(getComponent(j).getIonicCharge());
+    // }
+    // double val = - Math.log(oldFug*getComponent(watNumb).getx()/pureFug) *
+    // 1.0/ions/getComponent(watNumb).getMolarMass();
+    // return val;
+    // }
+    // else return getOsmoticCoefficient(watNumb);
+    // }
     @Override
-	public double getMeanIonicActivity(int comp1, int comp2) {
+    public double getMeanIonicActivity(int comp1, int comp2) {
         double act1 = 0.0;
         double act2 = 0.0;
         int watNumb = 0;
@@ -1398,22 +1395,22 @@ abstract class Phase extends Object
     }
 
     @Override
-	public final int getPhaseType() {
+    public final int getPhaseType() {
         return phaseType;
     }
 
     @Override
-	public double getGibbsEnergy() {
+    public double getGibbsEnergy() {
         return getEnthalpy() - temperature * getEntropy();
     }
 
     @Override
-	public double getInternalEnergy() {
+    public double getInternalEnergy() {
         return getEnthalpy() - pressure * getMolarVolume() * numberOfMolesInPhase;
     }
 
     @Override
-	public double getHelmholtzEnergy() {
+    public double getHelmholtzEnergy() {
         return getInternalEnergy() - temperature * getEntropy();
     }
 
@@ -1421,7 +1418,7 @@ abstract class Phase extends Object
      * Returns the molar mass of the phase. Unit: kg/mol
      */
     @Override
-	public final double getMolarMass() {
+    public final double getMolarMass() {
         double tempVar = 0;
         for (int i = 0; i < numberOfComponents; i++) {
             tempVar += componentArray[i].getx() * componentArray[i].getMolarMass();
@@ -1433,12 +1430,11 @@ abstract class Phase extends Object
      * method to get the Joule Thomson Coefficient of a phase note: implemented in
      * phaseEos
      * 
-     * @param unit The unit as a string. Supported units are K/bar, C/bar
-     *
-     * @return Joule Thomson coefficient in given unit
+     * @param  unit The unit as a string. Supported units are K/bar, C/bar
+     * @return      Joule Thomson coefficient in given unit
      */
     @Override
-	public double getJouleThomsonCoefficient(String unit) {
+    public double getJouleThomsonCoefficient(String unit) {
         double JTcoef = getJouleThomsonCoefficient();
         double conversionFactor = 1.0;
         switch (unit) {
@@ -1459,7 +1455,7 @@ abstract class Phase extends Object
      * @return Joule Thomson coefficient in K/bar
      */
     @Override
-	public double getJouleThomsonCoefficient() {
+    public double getJouleThomsonCoefficient() {
         return 0;
     }
 
@@ -1470,18 +1466,18 @@ abstract class Phase extends Object
      * @return density with unit kg/m3
      */
     @Override
-	public double getDensity() {
+    public double getDensity() {
         return 1.0 / getMolarVolume() * getMolarMass() * 1.0e5;
     }
 
     /**
      * method to get density of a fluid note: with Peneloux volume correction
      *
-     * @param unit The unit as a string. Supported units are kg/m3, mol/m3
-     * @return density in specified unit
+     * @param  unit The unit as a string. Supported units are kg/m3, mol/m3
+     * @return      density in specified unit
      */
     @Override
-	public double getDensity(String unit) {
+    public double getDensity(String unit) {
         double refDensity = getPhysicalProperties().getDensity(); // density in kg/m3
         double conversionFactor = 1.0;
         switch (unit) {
@@ -1498,37 +1494,37 @@ abstract class Phase extends Object
     }
 
     @Override
-	public final double getPhaseFraction() {
+    public final double getPhaseFraction() {
         return getBeta();
     }
 
     @Override
-	public final double getBeta() {
+    public final double getBeta() {
         return this.beta;
     }
 
     @Override
-	public double getdPdrho() {
+    public double getdPdrho() {
         return 0;
     }
 
     @Override
-	public double getdrhodP() {
+    public double getdrhodP() {
         return 0.0;
     }
 
     @Override
-	public double getdrhodT() {
+    public double getdrhodT() {
         return 0;
     }
 
     @Override
-	public double getdrhodN() {
+    public double getdrhodN() {
         return 0;
     }
 
     @Override
-	public void setMixingRule(int type) {
+    public void setMixingRule(int type) {
         mixingRuleNumber = type;
     }
 
@@ -1564,27 +1560,28 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getdPdTVn() {
+    public double getdPdTVn() {
         return 0;
     }
 
     @Override
-	public double getdPdVTn() {
+    public double getdPdVTn() {
         return 0;
     }
 
     @Override
-	public double getpH() {
+    public double getpH() {
         return getpH_old();
-//        System.out.println("ph - old " + getpH_old());
-//        initPhysicalProperties();
-//        for(int i = 0; i<numberOfComponents; i++) {
-//            if(componentArray[i].getName().equals("H3O+")){
-//                return - MathLib.generalMath.GeneralMath.log10(componentArray[i].getNumberOfMolesInPhase()*getPhysicalProperties().getDensity()/(numberOfMolesInPhase*getMolarMass())*1e-3);
-//            }
-//        }
-//        System.out.println("no H3Oplus");
-//        return 7.0;
+        // System.out.println("ph - old " + getpH_old());
+        // initPhysicalProperties();
+        // for(int i = 0; i<numberOfComponents; i++) {
+        // if(componentArray[i].getName().equals("H3O+")){
+        // return -
+        // MathLib.generalMath.GeneralMath.log10(componentArray[i].getNumberOfMolesInPhase()*getPhysicalProperties().getDensity()/(numberOfMolesInPhase*getMolarMass())*1e-3);
+        // }
+        // }
+        // System.out.println("no H3Oplus");
+        // return 7.0;
     }
 
     public double getpH_old() {
@@ -1601,12 +1598,12 @@ abstract class Phase extends Object
     }
 
     @Override
-	public ComponentInterface getComponent(int i) {
+    public ComponentInterface getComponent(int i) {
         return componentArray[i];
     }
 
     @Override
-	public ComponentInterface getComponent(String name) {
+    public ComponentInterface getComponent(String name) {
         try {
             for (int i = 0; i < numberOfComponents; i++) {
                 if (componentArray[i].getName().equals(name)) {
@@ -1622,7 +1619,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public boolean hasComponent(String name) {
+    public boolean hasComponent(String name) {
         for (int i = 0; i < numberOfComponents; i++) {
             if (componentArray[i].getName().equals(name)) {
                 return true;
@@ -1637,18 +1634,18 @@ abstract class Phase extends Object
      * @return Value of property mixingRuleNumber.
      */
     @Override
-	public final int getMixingRuleNumber() {
+    public final int getMixingRuleNumber() {
         return mixingRuleNumber;
     }
 
     /**
      * Indexed getter for property refPhase.
      *
-     * @param index Index of the property.
-     * @return Value of the property at <CODE>index</CODE>.
+     * @param  index Index of the property.
+     * @return       Value of the property at <CODE>index</CODE>.
      */
     @Override
-	public neqsim.thermo.phase.PhaseInterface getRefPhase(int index) {
+    public neqsim.thermo.phase.PhaseInterface getRefPhase(int index) {
         if (refPhase == null) {
             initRefPhases(false);
         }
@@ -1661,7 +1658,7 @@ abstract class Phase extends Object
      * @return Value of property refPhase.
      */
     @Override
-	public neqsim.thermo.phase.PhaseInterface[] getRefPhase() {
+    public neqsim.thermo.phase.PhaseInterface[] getRefPhase() {
         if (refPhase == null) {
             initRefPhases(false);
         }
@@ -1675,7 +1672,7 @@ abstract class Phase extends Object
      * @param refPhase New value of the property at <CODE>index</CODE>.
      */
     @Override
-	public void setRefPhase(int index, neqsim.thermo.phase.PhaseInterface refPhase) {
+    public void setRefPhase(int index, neqsim.thermo.phase.PhaseInterface refPhase) {
         this.refPhase[index] = refPhase;
     }
 
@@ -1688,7 +1685,7 @@ abstract class Phase extends Object
      * @param refPhase New value of property refPhase.
      */
     @Override
-	public void setRefPhase(neqsim.thermo.phase.PhaseInterface[] refPhase) {
+    public void setRefPhase(neqsim.thermo.phase.PhaseInterface[] refPhase) {
         this.refPhase = refPhase;
     }
 
@@ -1698,7 +1695,7 @@ abstract class Phase extends Object
      * @return Value of property physicalPropertyType.
      */
     @Override
-	public final int getPhysicalPropertyType() {
+    public final int getPhysicalPropertyType() {
         return physicalPropertyType;
     }
 
@@ -1708,34 +1705,34 @@ abstract class Phase extends Object
      * @param physicalPropertyType New value of property physicalPropertyType.
      */
     @Override
-	public void setPhysicalPropertyType(int physicalPropertyType) {
+    public void setPhysicalPropertyType(int physicalPropertyType) {
         this.physicalPropertyType = physicalPropertyType;
     }
 
     @Override
-	public void setParams(PhaseInterface phase, double[][] alpha, double[][] Dij, double[][] DijT, String[][] mixRule,
+    public void setParams(PhaseInterface phase, double[][] alpha, double[][] Dij, double[][] DijT, String[][] mixRule,
             double[][] intparam) {
     }
 
     @Override
-	public final boolean useVolumeCorrection() {
+    public final boolean useVolumeCorrection() {
         return useVolumeCorrection;
     }
 
     @Override
-	public void useVolumeCorrection(boolean volcor) {
+    public void useVolumeCorrection(boolean volcor) {
         useVolumeCorrection = volcor;
     }
 
     @Override
-	public double getFugacity(int compNumb) {
+    public double getFugacity(int compNumb) {
         // System.out.println("fugcoef" +
         // this.getComponent(compNumb).getFugasityCoefficient());
         return this.getComponent(compNumb).getx() * this.getComponent(compNumb).getFugasityCoefficient() * pressure;
     }
 
     @Override
-	public double getFugacity(String compName) {
+    public double getFugacity(String compName) {
         return this.getComponent(compName).getx() * this.getComponent(compName).getFugasityCoefficient() * pressure;
     }
 
@@ -1783,25 +1780,23 @@ abstract class Phase extends Object
      * Setter for property beta.
      *
      * @param beta New value of property beta.
-     *
      */
     @Override
-	public final void setBeta(double beta) {
+    public final void setBeta(double beta) {
         this.beta = beta;
     }
 
     @Override
-	public void setMixingRuleGEModel(String name) {
+    public void setMixingRuleGEModel(String name) {
     }
 
     /**
      * Getter for property phaseTypeName.
      *
      * @return Value of property phaseTypeName.
-     *
      */
     @Override
-	public java.lang.String getPhaseTypeName() {
+    public java.lang.String getPhaseTypeName() {
         return phaseTypeName;
     }
 
@@ -1809,10 +1804,9 @@ abstract class Phase extends Object
      * Setter for property phaseTypeName.
      *
      * @param phaseTypeName New value of property phaseTypeName.
-     *
      */
     @Override
-	public void setPhaseTypeName(java.lang.String phaseTypeName) {
+    public void setPhaseTypeName(java.lang.String phaseTypeName) {
         this.phaseTypeName = phaseTypeName;
     }
 
@@ -1820,10 +1814,9 @@ abstract class Phase extends Object
      * Getter for property mixingRuleDefined.
      *
      * @return Value of property mixingRuleDefined.
-     *
      */
     @Override
-	public boolean isMixingRuleDefined() {
+    public boolean isMixingRuleDefined() {
         return mixingRuleDefined;
     }
 
@@ -1831,10 +1824,9 @@ abstract class Phase extends Object
      * Setter for property mixingRuleDefined.
      *
      * @param mixingRuleDefined New value of property mixingRuleDefined.
-     *
      */
     @Override
-	public void setMixingRuleDefined(boolean mixingRuleDefined) {
+    public void setMixingRuleDefined(boolean mixingRuleDefined) {
         this.mixingRuleDefined = mixingRuleDefined;
     }
 
@@ -1842,25 +1834,24 @@ abstract class Phase extends Object
      * Setter for property phaseType.
      *
      * @param phaseType New value of property phaseType.
-     *
      */
     @Override
-	public final void setPhaseType(int phaseType) {
+    public final void setPhaseType(int phaseType) {
         this.phaseType = phaseType;
     }
 
     @Override
-	public void setMolarVolume(double molarVolume) {
+    public void setMolarVolume(double molarVolume) {
         this.molarVolume = molarVolume;
     }
 
     @Override
-	public void calcMolarVolume(boolean test) {
+    public void calcMolarVolume(boolean test) {
         this.calcMolarVolume = test;
     }
 
     @Override
-	public void setTotalVolume(double volume) {
+    public void setTotalVolume(double volume) {
         phaseVolume = volume;
     }
 
@@ -1870,7 +1861,7 @@ abstract class Phase extends Object
      * @return volume in unit m3*1e5
      */
     @Override
-	public double getTotalVolume() {
+    public double getTotalVolume() {
         if (constantPhaseVolume) {
             return phaseVolume;
         }
@@ -1883,19 +1874,18 @@ abstract class Phase extends Object
      * @return volume in unit m3*1e5
      */
     @Override
-	public double getVolume() {
+    public double getVolume() {
         return getTotalVolume();
     }
 
     /**
      * method to return fluid volume
      *
-     * @param unit The unit as a string. Supported units are m3, litre
-     *
-     * @return volume in specified unit
+     * @param  unit The unit as a string. Supported units are m3, litre
+     * @return      volume in specified unit
      */
     @Override
-	public double getVolume(String unit) {
+    public double getVolume(String unit) {
         double conversionFactor = 1.0;
         switch (unit) {
         case "m3":
@@ -1915,12 +1905,12 @@ abstract class Phase extends Object
      * @return volume in unit m3
      */
     @Override
-	public double getCorrectedVolume() {
+    public double getCorrectedVolume() {
         return getMolarMass() / getPhysicalProperties().getDensity() * getNumberOfMolesInPhase();
     }
 
     @Override
-	public boolean hasPlusFraction() {
+    public boolean hasPlusFraction() {
         for (int i = 0; i < numberOfComponents; i++) {
             if (getComponent(i).isIsPlusFraction()) {
                 return true;
@@ -1930,7 +1920,7 @@ abstract class Phase extends Object
     }
 
     @Override
-	public boolean hasTBPFraction() {
+    public boolean hasTBPFraction() {
         for (int i = 0; i < numberOfComponents; i++) {
             if (getComponent(i).isIsTBPfraction()) {
                 return true;
@@ -1940,17 +1930,17 @@ abstract class Phase extends Object
     }
 
     @Override
-	public boolean isConstantPhaseVolume() {
+    public boolean isConstantPhaseVolume() {
         return constantPhaseVolume;
     }
 
     @Override
-	public void setConstantPhaseVolume(boolean constantPhaseVolume) {
+    public void setConstantPhaseVolume(boolean constantPhaseVolume) {
         this.constantPhaseVolume = constantPhaseVolume;
     }
 
     @Override
-	public double getMass() {
+    public double getMass() {
         return getMolarMass() * numberOfMolesInPhase;
     }
 
@@ -1960,12 +1950,12 @@ abstract class Phase extends Object
      * @return speed of sound in m/s
      */
     @Override
-	public double getSoundSpeed() {
+    public double getSoundSpeed() {
         return 0.0;
     }
 
     @Override
-	public ComponentInterface getComponentWithIndex(int index) {
+    public ComponentInterface getComponentWithIndex(int index) {
         for (int i = 0; i < numberOfComponents; i++) {
             if (componentArray[i].getIndex() == index) {
                 return componentArray[i];
@@ -1975,12 +1965,12 @@ abstract class Phase extends Object
     }
 
     @Override
-	public double getWtFraction(SystemInterface system) {
+    public double getWtFraction(SystemInterface system) {
         return getBeta() * getMolarMass() / system.getMolarMass();
     }
 
     @Override
-	public double getMoleFraction() {
+    public double getMoleFraction() {
         return beta;
     }
 
@@ -1988,12 +1978,12 @@ abstract class Phase extends Object
      * @param initType the initType to set
      */
     @Override
-	public void setInitType(int initType) {
+    public void setInitType(int initType) {
         this.initType = initType;
     }
 
     @Override
-	public double getWtFractionOfWaxFormingComponents() {
+    public double getWtFractionOfWaxFormingComponents() {
         double wtFrac = 0.0;
 
         for (int i = 0; i < numberOfComponents; i++) {
@@ -2010,7 +2000,7 @@ abstract class Phase extends Object
      * @return density with unit kg/m3
      */
     @Override
-	public double getDensity_GERG2008() {
+    public double getDensity_GERG2008() {
         neqsim.thermo.util.GERG.NeqSimGERG2008 test = new neqsim.thermo.util.GERG.NeqSimGERG2008(this);
         return test.getDensity();
     }
@@ -2021,7 +2011,7 @@ abstract class Phase extends Object
      * @return density with unit kg/m3
      */
     @Override
-	public double getDensity_AGA8() {
+    public double getDensity_AGA8() {
         neqsim.thermo.util.GERG.NeqSimAGA8Detail test = new neqsim.thermo.util.GERG.NeqSimAGA8Detail(this);
         return test.getDensity();
     }
@@ -2029,13 +2019,12 @@ abstract class Phase extends Object
     /**
      * method to return flow rate of phase
      *
-     * @param flowunit The unit as a string. Supported units are kg/sec, kg/min,
-     *                 m3/sec, m3/min, m3/hr, mole/sec, mole/min, mole/hr
-     *
-     * @return flow rate in specified unit
+     * @param  flowunit The unit as a string. Supported units are kg/sec, kg/min,
+     *                  m3/sec, m3/min, m3/hr, mole/sec, mole/min, mole/hr
+     * @return          flow rate in specified unit
      */
     @Override
-	public double getFlowRate(String flowunit) {
+    public double getFlowRate(String flowunit) {
         if (flowunit.equals("kg/sec")) {
             return numberOfMolesInPhase * getMolarMass();
         } else if (flowunit.equals("kg/min")) {
